[package]
name = "worker-route"
authors = ["Seng Ho <sengho0606@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sengho66/worker-route"
version = "0.0.1"
description = "Route handlers an data extractor for Cloudflare Workers."
[dependencies]
worker = "0.0.18"
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
serde_qs = "0.12.0"
worker-route-macro = { version ="0.0.1", path = "macro" }

[workspace]
members = ["macro", "example"]
