[package]
name = "worker-route-macro"
authors = ["Seng Ho <sengho0606@gmail.com>"]
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sengho66/worker-route/tree/main/worker-route-macro"
description = "Proc macro for worker-route crate"
documentation = "https://docs.rs/worker-route-macro"
keywords = ["http", "workers", "web", "serverless"]
categories = ["network-programming", "workers", "serverless", "web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["full", "visit"] }
proc-macro2 = "1.0.51"
quote = "1.0.23"
paste = "1.0.14"
