[package]
name = "worker-route-example-custom-response"
version = "0.0.1"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { git = "https://github.com/cloudflare/workers-rs", version = "0.0.18" }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
worker-route = { path = "../../", features = ["d1", "queue", "cookies"] }
lazy_static = "1.4.0"
